# melodix

./: .gitignore  CMakeLists.txt  MelodixAPI.swagger.json  README.md  digimusic.desktop  generator-code
.github/workflows/: build-deb.yml  deploy-github-page.yml  jekyll-gh-pages.yml
debian/: changelog  control  copyright
misc/: digimusic.desktop  melodix.desktop
src/: CMakeLists.txt  img.qrc  main.cpp  main.qml  music.qrc  worker.cpp  worker.h
src/api/: CMakeLists.txt  api.cpp  api.h  dataformatter.cpp  dataformatter.h
src/cpp/: worker.cpp  worker.h
src/cpp/network/: network.cpp  network.h
src/cpp/player/: player.cpp  player.h  playlistmodel.cpp  playlistmodel.h
src/libimusic/: CMakeLists.txt  global.cpp  global.h  libimusic_global.h  player.cpp  player.h  playlistmodel.cpp  playlistmodel.h
src/libimusic/network/: network.cpp  network.h
src/music-player/: CMakeLists.txt  img.qrc  main.cpp  main.qml  music.qrc
src/music-player/discover/: Discover.qml  HotPlaylists.qml
src/music-player/index/: HotSigner.qml  Index.qml  RecommendMV.qml  RecommendNewSongs.qml  RecommendPlaylist.qml
src/music-player/login/: LoginDialog.qml
src/music-player/mainwindow/: MainWindow.qml
src/music-player/playlist/: Playlist.qml
src/music-player/playlistdetail/: PlaylistDetail.qml
src/music-player/router/: Router.qml
src/music-player/titlebar/: AccountButton.qml  MyTitlebar.qml  TabButton.qml
src/music-player/toolbar/: Toolbar.qml  VolumeSlider.qml
src/music-player/widgets/: Loading.qml  RoundedImage.qml
src/player/: player.cpp  player.h  playlist.cpp  playlist.h  playlistmodel.cpp  playlistmodel.h
src/qml/api/: API.qml
src/qml/artist/: Artist.qml  ArtistHotSongs.qml
src/qml/daily/: Daily.qml
src/qml/dialogs/: CloseDialog.qml  SettingsDialog.qml
src/qml/discover/: Discover.qml  HotPlaylists.qml
src/qml/favorite/: Favorite.qml
src/qml/index/: HotSigner.qml  Index.qml  RecommendMV.qml  RecommendNewSongs.qml  RecommendPlaylist.qml
src/qml/login/: CaptchaLogin.qml  Login.qml  LoginDialog.qml  PasswordLogin.qml  PhoneLogin.qml  QRCodeLogin.qml
src/qml/lyric/: Lyric.qml  LyricRect.qml
src/qml/mv/: Mv.qml  MvComment.qml
src/qml/pages/: Discover.qml  Index.qml  Library.qml  PlaylistDetail.qml
src/qml/playlist/: Playlist.qml  PlaylistDelegate.qml
src/qml/playlistdetail/: PlaylistDetail.qml  PlaylistDetailHead.qml
src/qml/search/: Search.qml
src/qml/settings/: Common.qml  Settings.qml
src/qml/titlebar/: AccountButton.qml  AvatarButton.qml  MySearchEdit.qml  MyTitlebar.qml  NickNameButton.qml  NoticeButton.qml  TabButton.qml
src/qml/toolbar/: Toolbar.qml  VolumeSlider.qml
src/qml/user/: User.qml  UserDynamic.qml  UserHeaderRegion.qml  UserPlaylist.qml
src/qml/widgets/: Banner.qml  Duration.qml  GridPlaylists.qml  GridSigner.qml  GridSong.qml  ListViewDelegate.qml  PlayTime.qml  PlaylistDetailDelegate.qml  RightClickMenu.qml  RoundedImage.qml  Sidebar.qml  UserCreatePlaylist.qml  UserPlaylist.qml
src/router/: Router.qml
src/util/: Util.qml  qmldir
